--- a/hello-cdk/amplify.yml
+++ b/hello-cdk/amplify.yml
@@ -1,12 +1,6 @@
 version: 1
 applications:
-  - backend:
-      phases:
-        build:
-          commands:
-            - '# Execute Amplify CLI with the helper script'
-            - amplifyPush --simple
-    frontend:
+  - frontend:
       phases:
         preBuild:
           commands:
